// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api client builder create ApiClientMatcher with match 1`] = `
Object {
  "client": "http-request",
  "metadata": Object {
    "method": "get",
    "url": "/api/functionName",
  },
}
`;

exports[`api client builder create ApiClientMatcher with route 1`] = `
Object {
  "client": "http-request",
  "metadata": Object {
    "url": "/api/test",
  },
}
`;

exports[`api client builder use ApiClientMatcher to build api client 1`] = `
"import { request as request$0 } from 'http-request';

export default function $default(...args) {
  const options = Object.assign(
    {
      functionId: 'src-index',
      data: { args },
    },
    {
      url: '/api/test',
    }
  );

  return request$0(options);
}
"
`;

exports[`api client builder use ApiClientMatcher with multi matcher 1`] = `
"import { request as request$0 } from 'http-request';

export default function $default(...args) {
  const options = Object.assign(
    {
      functionId: 'src-index',
      data: { args },
    },
    {
      url: '/about',
    }
  );

  return request$0(options);
}
"
`;

exports[`api client builder use ApiClientMatcher with multi matcher 2`] = `
"import { request as request$0 } from 'hooks-miniprogram-client';

export function getOpenId(...args) {
  const options = Object.assign(
    {
      functionId: 'event-index-getopenid',
      data: { args },
    },
    {}
  );

  return request$0(options);
}
"
`;
